order-confirmation-mail

--- a/templates/order_confirmation.handlebars
+++ b/templates/order_confirmation.handlebars
@@ -4,12 +4,12 @@
   <meta charset="utf-8">
   <title>Order Confirmation</title>
 </head>
-<body style="background-color: #f7f7f1; color: black; padding: 20px;">
-  <header style="text-align: center;">
-    <img src="https://emaxapi.onrender.com/images/logo2.jpg" alt="EMAX" width="100" height="100" /> 
+<body style=" color: black; padding: 20px;">
+  <header style="text-align: center; background-color: white;">
+    <img src="https://emaxapi.onrender.com/uploads/logo2-white.jpg" alt="EMAX" width="200" height="100" /> 
     <h1 style="color: black;">Order Confirmation</h1>
   </header>
-  <main style="color: black;">
+  <main style="color: black; background-color: #f7f7f1;">
     <p style="color: black;">Dear {{ name }},</p>
     <p style="color: black;">Thank you for placing an order with EMAX. Your order details are as follows:</p>
 
